--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <img src="/img/yo3.jpeg" alt="Profile" class="profile-pic">
+            <img src="img/yo3.jpeg" alt="Profile" class="profile-pic">
             <h1 class="title">Giovanni López</h1>
             <h2 class="subtitle">Backend Developer</h2>
             <p class="tagline">"El verdadero conocimiento se encuentra en el vivir, no solo en el pensar."</p>
@@ -50,7 +50,7 @@
             <div class="projects-grid">
                 <!-- Proyecto 1 -->
                 <div class="project-card">
-                    <img src="/img/seedlink.png" alt="Proyecto 1" class="project-img">
+                    <img src="img/seedlink.png" alt="Proyecto 1" class="project-img">
                     <h3 class="project-title">SeedLink-AI</h3>
                     <p class="project-description">
                         Es una solución innovadora para la agricultura sostenible que combina inteligencia artificial y prácticas tradicionales mayas. Diseñada para funcionar tanto online como offline.
@@ -59,7 +59,7 @@
                 </div>
                 <!-- Proyecto 2 -->
                 <div class="project-card">
-                    <img src="/img/control-estudiantes.png" alt="Proyecto 2" class="project-img">
+                    <img src="img/control-estudiantes.png" alt="Proyecto 2" class="project-img">
                     <h3 class="project-title">Control de Estudiantes</h3>
                     <p class="project-description">
                         Aplicación multiplataforma para gestionar calificaciones y asistencia, con sincronización offline.
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="/img/econecta.png" alt="Proyecto 3" class="project-img">
+                    <img src="img/econecta.png" alt="Proyecto 3" class="project-img">
                     <h3 class="project-title">EcoNecta</h3>
                     <p class="project-description">
                         Plataforma para la sostenibilidad agrícola, combinando análisis climático, IA y automatización.
