--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <img src="https://github.com/Gi0yis/portafolio-gio/blob/main/img/yo.jpeg" alt="Profile" class="profile-pic">
+            <img src="img/yo3.jpeg" alt="Profile" class="profile-pic">
             <h1 class="title">Giovanni López</h1>
             <h2 class="subtitle">Backend Developer</h2>
             <p class="tagline">"El verdadero conocimiento se encuentra en el vivir, no solo en el pensar."</p>
