--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +10,14 @@
 </head>
 <body>
     <div class="container">
-        <!-- Header -->
+
         <header class="header">
-            <img src="img/yo3.jpeg" alt="Profile" class="profile-pic">
+            <!--<img src="img/yo3.jpeg" alt="Profile" class="profile-pic">-->
             <h1 class="title">Giovanni López</h1>
             <h2 class="subtitle">Backend Developer</h2>
             <p class="tagline">"El verdadero conocimiento se encuentra en el vivir, no solo en el pensar."</p>
         </header>
 
-        <!-- Sección Sobre mí -->
         <section class="about-me">
             <h2 class="section-title">Sobre mí</h2>
             <p>
@@ -29,7 +28,6 @@
             </p>
         </section>
 
-        <!-- Habilidades -->
         <section class="skills">
             <h2 class="section-title">Habilidades</h2>
             <ul class="skills-list">
@@ -44,11 +42,10 @@
             </ul>
         </section>
 
-        <!-- Proyectos -->
         <section class="projects">
             <h2 class="section-title">Proyectos</h2>
             <div class="projects-grid">
-                <!-- Proyecto 1 -->
+              
                 <div class="project-card">
                     <img src="img/seedlink.png" alt="Proyecto 1" class="project-img">
                     <h3 class="project-title">SeedLink-AI</h3>
@@ -57,7 +54,7 @@
                     </p>
                     <a href="https://github.com/Gi0yis/SeedLink-AI" class="project-link">Ver más</a>
                 </div>
-                <!-- Proyecto 2 -->
+               
                 <div class="project-card">
                     <img src="img/control-estudiantes.png" alt="Proyecto 2" class="project-img">
                     <h3 class="project-title">Control de Estudiantes</h3>
@@ -78,7 +75,6 @@
             </div>
         </section>
 
-        <!-- Contacto -->
         <section class="contact">
             <h2 class="section-title">Contacto</h2>
             <p>¿Interesado en colaborar o simplemente charlar? ¡Estoy disponible!</p>
@@ -91,7 +87,6 @@
             </ul>
         </section>
 
-        <!-- Footer -->
         <footer class="footer">
             <p>© 2024 Giovanni López. Todos los derechos reservados.</p>
         </footer>
